fix(filter-bar): horizontal scroll in datetime pipe (#DS-4267) (#1069)

--- a/packages/components/filter-bar/pipes/pipe-date.scss
+++ b/packages/components/filter-bar/pipes/pipe-date.scss
@@ -95,6 +95,7 @@
 
                 & .kbq-date-period__time {
                     margin-left: -1px;
+                    max-width: 124px;
 
                     & .kbq-form-field__container {
                         border-top-left-radius: unset;
